# CheckersProject

./: BitBoardGE.c  BitBoardGE.h  CMakeLists.txt  README.md  README.txt  main.c
